# VitrOS

./: .gitignore  CLAUDE.md  Cargo.toml  Cargo.toml.old  README.md  cliff.toml
.cargo/: config.toml
.claude/agents/: runtime-bug-analyzer.md  rust-os-code-reviewer.md
.claude/skills/github-project-management/: SKILL.md  TEMPLATES.md
.claude/skills/qemu-gdb-debug/: SKILL.md
bootloader/: Cargo.toml  build.rs
bootloader/src/: main.rs
common/: Cargo.toml
common/src/: allocator.rs  allocator_visualization.rs  boot_info.rs  elf.rs  io.rs  lib.rs
common/src/graphics/: mod.rs
common/src/uefi/: mod.rs
kernel/: Cargo.toml  linker.ld
kernel/src/: acpi.rs  addr.rs  allocator.rs  allocator_observer.rs  allocator_visualization.rs  apic.rs  debug_overlay.rs  gdt.rs  hpet.rs  idt.rs  lib.rs  main.rs  msi.rs  msr.rs  mtrr.rs  paging.rs  pci.rs  pipeline_visualization.rs  pit.rs  serial.rs  stack.rs  task.rs  test_runner.rs  timer.rs  timer_device.rs
kernel/src/graphics/: buffer.rs  compositor.rs  compositor_observer.rs  draw_target.rs  mod.rs  region.rs  shadow_buffer.rs  writer.rs
kernel/src/sched/: blocking.rs  mod.rs  scheduler.rs  task.rs
kernel/src/sync/: blocking_mutex.rs  wait_queue.rs
kernel/src/usb/: mod.rs
kernel/src/usb/xhci/: mod.rs
mnt/: NvVars  kernel.elf
mnt/EFI/BOOT/: BOOTX64.EFI
scripts/: launch_qemu.sh  qemu_test_runner.sh  run_tests.sh
src/: allocator.rs  boot.rs  boot_info.rs  kernel.rs  main.rs  serial.rs  visualization.rs
src/graphics/: mod.rs
src/uefi/: mod.rs
