[package]
name = "vitros-kernel"
version.workspace = true
edition.workspace = true

[features]
visualize-allocator = ["vitros-common/visualize-allocator"]
visualize-pipeline = ["vitros-common/visualize-pipeline"]

[dependencies]
vitros-common = { path = "../common" }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
spin = "0.9"
